kubernetes/prod/wrk-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  labels:
    app: worker-api
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-api
  template:
    metadata:
      labels:
        app: worker-api
        env: prod
    spec:
      containers:
        - name: worker-api
          imagePullPolicy: Always
          image: kelach/atx_incidents:1.0
          command: ['python3', '-u', 'src/worker.py']
