kubernetes/prod/api-nodeport-service.yml
---
kind: Service
apiVersion: v1
metadata:
    name: api-service-nodeport
spec:
    type: NodePort
    selector:
        app: flask-api
    ports:
        - port: 5000
          targetPort: 5000
