kubernetes/prod/api-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: ClusterIP
  selector:
    app: flask-api
  ports:
  - name: flask-api
    port: 5000
    targetPort: 5000
