kubernetes/prod/redis-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
      env: prod
spec:
  type: ClusterIP
  selector:
    app: redis-db
    
  ports:
  - name: redis-db
    port: 6379
    targetPort: 6379
