kubernetes/prod/api-ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "atx-incidents.coe332.tacc.cloud"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: api-service-nodeport
              port:
                  number: 31587
